longhorn/recovery-downloads-pod.yml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.4-standalone-strict/pod-v1.json
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-recovery-downloads
  namespace: longhorn-system
spec:
  nodeName: k3s6
  hostPID: true
  restartPolicy: Never
  containers:
    - name: engine
      image: longhornio/longhorn-engine:v1.12.0
      imagePullPolicy: IfNotPresent
      command:
        - launch-simple-longhorn
      args:
        - pvc-b794810f-1a3f-4fb7-96d8-f76d098cff65
        - '322122547200'
      securityContext:
        privileged: true
      volumeMounts:
        - name: dev
          mountPath: /host/dev
        - name: proc
          mountPath: /host/proc
        - name: data
          mountPath: /volume
  volumes:
    - name: dev
      hostPath:
        path: /dev
        type: Directory
    - name: proc
      hostPath:
        path: /proc
        type: Directory
    - name: data
      hostPath:
        path: /mnt/storage03/replicas/pvc-b794810f-1a3f-4fb7-96d8-f76d098cff65-cc244faf
        type: Directory
